--- a/django_ckeditor_5/templates/django_ckeditor_5/widget.html
+++ b/django_ckeditor_5/templates/django_ckeditor_5/widget.html
@@ -4,6 +4,6 @@
 {% if errors %}
 {{ errors }}
 {% endif %}
-<input type="hidden" id="{{script_id}}-ck-editor-5-upload-url" data-upload-url="{{upload_url}}" data-csrf_cookie_name="{{ csrf_cookie_name }}">
+<input type="hidden" id="{{script_id}}-ck-editor-5-upload-url" data-upload-url="{{upload_url}}" data-upload-file-types="{{upload_file_types}}" data-csrf_cookie_name="{{ csrf_cookie_name }}">
 
 <span>{{ config|json_script:script_id }}</span>
